codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_constrained_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: rendered
---
                                        
  Describe the expected behavior,       
  constraints, and validation details   
  for this implementation.              
  ╭──────────────────────────────────╮  
  ┃ › visible draft                  │  
  enter to submit answer
